Add license files, etc. to sdk-all.feature

--- a/features/org.eclipse.datatools.sdk-all.feature/build.properties
+++ b/features/org.eclipse.datatools.sdk-all.feature/build.properties
@@ -3,6 +3,9 @@ bin.includes = eclipse_update_120.jpg,\
                feature.properties,\
                feature.xml,\
                license.html
+               
+root=rootfiles
+
 generate.feature@org.eclipse.datatools.sqldevtools.feature.source = org.eclipse.datatools.sqldevtools.feature
 generate.feature@org.eclipse.datatools.modelbase.feature.source = org.eclipse.datatools.modelbase.feature
 generate.feature@org.eclipse.datatools.connectivity.feature.source = org.eclipse.datatools.connectivity.feature
