--- a/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.properties
@@ -13,3 +13,10 @@ driver.version.category.description = HSQLDB JDBC Drivers for Version 1.8
 driver.name = HSQLDB JDBC Driver
 driver.description = JDBC driver for HSQLDB
 
+DRIVER_CLASS_PROPERTY_NAME=Driver Class
+VENDOR_PROPERTY_NAME=Vendor
+VERSION_PROPERTY_NAME=Version
+DATABASE_NAME_PROPERTY_NAME=Database Name
+CONNECTION_URL_PROPERTY_NAME=Connection URL
+USER_ID_PROPERTY_NAME=User ID
+
