[221237]  WTP refresh: need entry for Informix 10 and Sybase 15 in vendor doc contribution

--- a/plugins/org.eclipse.datatools.enablement.ibm.informix.dbdefinition/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.informix.dbdefinition/plugin.properties
@@ -13,8 +13,11 @@ pluginName = Eclipse Data Tools Platform Informix Database Definition Plug-in
 nl1PluginName = Informix Database Definition NL1 Fragment
 providerName = Eclipse.org
 
+10.0ProductString = Informix
+10.0VersionString = 10.0
+
 10ProductString = Informix
-10VersionString = 10.0
+10VersionString = 10
 
 94ProductString = Informix
 94VersionString = 9.4
