[221237]  WTP refresh: need entry for Informix 10 and Sybase 15 in vendor doc contribution

--- a/plugins/org.eclipse.datatools.enablement.sybase.ase.dbdefinition/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase.dbdefinition/plugin.properties
@@ -17,3 +17,6 @@ providerName = Eclipse.org
 
 15.0ProductString = Sybase
 15.0VersionString = 15.0
+
+15ProductString = Sybase
+15VersionString = 15
