[217948] Updated template wizard to generate enabledWhen.instanceof element, in lieu of the objectClass attribute

--- a/plugins/org.eclipse.datatools.connectivity.oda.template.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.template.ui/plugin.properties
@@ -30,5 +30,6 @@ runtime plug-in.</p>\
 <p><b>Extensions Used</b></p>\
 <li>org.eclipse.datatools.connectivity.oda.design.ui.dataSource</li>\
 <li>org.eclipse.datatools.connectivity.connectionProfile</li>\
+<li>org.eclipse.datatools.connectivity.ui.connectionProfileImage</li>\
 <li>org.eclipse.ui.propertyPages</li>
 
