--- a/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/build.properties
@@ -4,4 +4,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                plugin.properties,\
-               icons/
+               icons/,\
+               about.html
+src.includes = about.html
