--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
@@ -23,6 +23,7 @@ Extension.NewRepositoryWizard.Description = Create a new repository for connecti
 datatools.preference.page.name=Connectivity
 drivers.preference.page.name = Driver Definitions
 category.name.connectionProfiles = Connection Profiles
+datatools.core.ui.preferences.data.node = Data Tooling
 
 DSE.content = Data Source Explorer Extension
 
