--- a/plugins/org.eclipse.datatools.connectivity.ui.templates/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.templates/build.properties
@@ -4,7 +4,11 @@ bin.includes = plugin.xml,\
                about.html,\
                icons/,\
                plugin.properties,\
-               templates_3.2/
+               templates_3.2/,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               eclipse32.png
 jars.compile.order = .
 source.. = src/
 output.. = bin/
