--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -1,5 +1,5 @@
 ################################################################################
-## Copyright (c) 2005, 2007 Sybase, Inc.
+## Copyright (c) 2005, 2007, 2008 Sybase, Inc.
 ## All rights reserved. This program and the accompanying materials
 ## are made available under the terms of the Eclipse Public License v1.0
 ## which accompanies this distribution, and is available at
@@ -8,6 +8,7 @@
 ## Contributors:
 ##    Sybase, Inc. - initial API and implementation
 ##    IBM Corporation - migrated to new wizard framework
+##    IBM Corporation - fix for defect 222818
 ################################################################################ 
 plugin.internal_error=Internal Error - org.eclipse.datatools.connectivity
 ConnectionProfileConstants.unknownVersion=unknown
@@ -25,7 +26,7 @@ CloseManagedConnectionJob.name=Closing {0} connection to {1}. (Error\: {2})
 CloseManagedConnectionJob.error=Error closing {0} connection to {1}.
 CloseConnectionEventJob.name=Processing close connection event for {0}.
 assert.invalid.profile = Parsing error\: invalid attribute ({0})
-assert.invalid.profile.duplicateFactory = Parsing error\: duplicate factory id ({0})
+assert.invalid.profile.duplicateFactory = Parsing error\: duplicate factory id with duplicate priority ({0})
 assert.invalid.profile.nullFactory = Parsing error\: null factory or factory id ({0}/{1})
 dialog.title.error.loadwizard = Error loading new wizard in "{0}"!
 operation.new.connectionprofile = Creating profile\: "{0}"
