[223523] Added plugin.properties to build.properties bin.includes list for plugin o.e.d.sqltools.common.ui

--- a/plugins/org.eclipse.datatools.sqltools.common.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.common.ui/build.properties
@@ -10,7 +10,8 @@ bin.includes = META-INF/,\
                about.properties,\
                eclipse32.gif,\
                eclipse32.png,\
-               schema/
+               schema/,\
+               plugin.properties
 
 src.dir = src/
 plugin.version =	1.0.0.200802191
