--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/ConstructedSQLEditorResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/ConstructedSQLEditorResources.properties
@@ -11,7 +11,7 @@
 
 ## Resources for the standard editor actions
 
-ContentAssistProposal.label       =Co&ntent Assist@Ctrl+SPACE
+ContentAssistProposal.label       =Co&ntent Assist
 ContentAssistProposal.tooltip     =Content Assist
 ContentAssistProposal.image       =
 ContentAssistProposal.description =Content Assist
