--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/preferences/PreferenceMessages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/preferences/PreferenceMessages.properties
@@ -9,7 +9,7 @@ CodeAssist_asa_tips=The following preferences are only available for SQL Anywher
 CodeAssist_showSystemViews=Show system &views
 CodeAssist_asa_titile=&ASA
 CodeAssist_insertSingleProposals=&Insert single proposals automatically
-CodeAssist_autoActivationGroup=Auto Activation
+CodeAssist_autoActivationGroup=Auto activation
 CodeAssist_enableAuto=&Enable auto activation
 CodeAssist_autoActivationDelay=A&uto activation delay:
 CodeAssist_autoActivationTriggers=Auto activation triggers for SQL:
@@ -74,3 +74,11 @@ GeneralPreferencePage_description=General settings for the Database Development 
 GeneralPreferencePage_hover_affordance=Show affordance in &hover on how to make it sticky
 GeneralPreferencePage_portable_check=&Portability check target:
 
+SyntaxColoringPage_description=Color and style settings for the syntax.
+SyntaxColoringPage_color=&Color:
+SyntaxColoringPage_bold=&Bold
+SyntaxColoringPage_italic=&Italic
+SyntaxColoringPage_strikethrough=&Strikethrough
+SyntaxColoringPage_underline=&Underline
+SyntaxColoringPage_preview=Previe&w:
+SyntaxColoringPage_syntax_items=S&yntax items:
