197082: Attach profile automatically if there is selection in D.S.E. 197156: Execute SQL directly

--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
@@ -33,4 +33,6 @@ sql_scrapbook=SQL Scrapbook
 open_sql_scrapbook=Open SQL Scrapboo&amp;k
 open_sql_scrapbook_tooltip=Open scrapbook to edit SQL statements
 
+DatabaseManagement.ExecuteSQLFile=E&xecute SQL Files
+DatabaseManagement.SetConnectionInfo=&Set Connection Info
 
