additional updates to ftp profile sample

--- a/examples/org.eclipse.datatools.connectivity.sample.ftp/build.properties
+++ b/examples/org.eclipse.datatools.connectivity.sample.ftp/build.properties
@@ -1,10 +1,10 @@
-bin.includes = META-INF/,\
-               plugin.xml,\
-               about.html,\
+bin.includes = plugin.xml,\
                icons/,\
+               about.html,\
                plugin.properties,\
-               plugin_desc.txt,\
-               .
-output.org.eclipse.datatools.connectivity.sample.ftp.jar = bin/
-jars.compile.order = org.eclipse.datatools.connectivity.sample.ftp.jar
-source.. = src/
+               cpftpsample.jar,\
+               META-INF/
+
+jars.compile.order = cpftpsample.jar
+source.cpftpsample.jar = src/
+output.cpftpsample.jar = bin/
