--- a/plugins/org.eclipse.datatools.connectivity/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity/plugin.properties
@@ -1,5 +1,5 @@
 ################################################################################
-## Copyright (c) 2005 Sybase, Inc.
+## Copyright (c) 2005, 2008 Sybase, Inc.
 ## All rights reserved. This program and the accompanying materials
 ## are made available under the terms of the Eclipse Public License v1.0
 ## which accompanies this distribution, and is available at
@@ -7,10 +7,12 @@
 ##
 ## Contributors:
 ##    Sybase, Inc. - initial API and implementation
+##    IBM Corporation -  fix for defect #223855
 ################################################################################ 
 Plugin.Name = Data Tools Platform Connectivity Plug-in
 Plugin.ProviderName = Eclipse.org
 
 extension-point.name.connectionProfile = Connection Profile Extension
 extension-point.name.driverExtension = driverExtension
+extension-point.name. ProfileManagerInitializationProvider =  ProfileManagerInitializationProvider
 ConnectionProfileRepository.Category.Name = Connection Profile Repositories
