--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/plugin.xml
@@ -3,7 +3,7 @@
 <!--
 /**
  *************************************************************************
- * Copyright (c) 2006 Actuate Corporation.
+ * Copyright (c) 2006, 2008 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -14,7 +14,7 @@
  *  
  *************************************************************************
  *
- * $Id: plugin.xml,v 1.12 2006/10/16 09:31:27 lchan Exp $
+ * $Id: plugin.xml,v 1.13 2008/02/21 05:01:55 lchan Exp $
  */
 -->
 
@@ -32,7 +32,7 @@
       <page
             category="org.eclipse.datatools.connectivity.internal.ui.preferences.DataToolsMainPage"
             class="org.eclipse.datatools.connectivity.oda.design.internal.ui.preferences.OpenDataAccessPage"
-            id="org.eclipse.datatools.connectivity.oda.design.internal.ui.preferences.OpenDataAccessPage"
+            id="org.eclipse.datatools.connectivity.oda.design.ui.preferences.OpenDataAccessPage"
             name="%oda.preference.page.name"/>
    </extension>
    <extension
