--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
@@ -21,12 +21,16 @@
             </enablement>
             </actionProvider>
             <triggerPoints>
-                  <and>
+				<or>
+                  <instanceof value="org.eclipse.datatools.modelbase.sql.schema.SQLObject"/>
+                  <instanceof value="org.eclipse.datatools.connectivity.sqm.core.ui.explorer.virtual.IVirtualNode"/>
+			      <and>
                      <instanceof value="org.eclipse.datatools.connectivity.IConnectionProfile"/>
 				     <test
 						property="org.eclipse.datatools.connectivity.profile.property.factoryID"
 						value="org.eclipse.datatools.connectivity.sqm.core.connection.ConnectionInfo"/>
                   </and>
+                </or>
             </triggerPoints>
             <possibleChildren>
                <or>
