--- a/plugins/org.eclipse.datatools.enablement.sybase/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase/plugin.properties
@@ -1,9 +1,27 @@
 Plugin.name = High-level Sybase Enablement Plug-in
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Sybase, Inc.
 
 sybase.drivers.category = Sybase
 sybase.drivers.category.description = Drivers associated with Sybase products
 # ====================================================================
 pluginName = Sybasesqlmodel Model
-providerName = Eclipse.org
-
+providerName = Sybase, Inc.
+temptable.name = Temporary Table
+trigger.name = Trigger
+parameter.name = Parameter
+parameters.node.name = Parameter Folder
+storedprocedure.node.name = Stored Procedure Folder
+table.node.name = Table Folder
+view.node.name = View Folder
+udt.node.name = User Defined Type Folder
+udf.node.name = User Defined Function Folder
+trigger.node.name = Trigger Folder
+column.node.name = Column Folder
+index.node.name = Index Folder
+checkconstraint.node.name = Check Constraint Folder
+primarykey.node.name = Primary Key Folder
+uniqueconstraint.node.name = Unique Constraint Folder
+foreignkey.node.name = Foreign Key Folder
+event.node.name = Event Folder
+schema.node.name = Schema Folder
+catalog.node.name = Database Folder
