Adjusting the "Other Driver" driver templates for ASA & ASE so we can remove the old *.ase.profile plug-in from the feature

--- a/plugins/org.eclipse.datatools.enablement.sybase.asa/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa/plugin.properties
@@ -9,3 +9,14 @@ asa.category = ASA
 10.xProductString = Sybase Adaptive Server Anywhere (ASA)
 9.xVersionString = 9.x
 10.xVersionString = 10.x
+
+driverClass = Driver Class
+driverVendor = Vendor
+driverVersion = Version
+driverDBName = Database Name
+driverConnectionURL = Connection URL
+driverUID = User ID
+driverPWD = Password
+
+org.eclipse.datatools.enablement.sybase.asa.9_x.other.driverTemplate = Other Driver
+org.eclipse.datatools.enablement.sybase.asa.10_0.other.driverTemplate = Other Driver
