--- a/plugins/org.eclipse.datatools.enablement.sybase.ase/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase/plugin.properties
@@ -11,3 +11,14 @@ ase.category = ASE
 
 ase12.xa.driver.template = Sybase XA JDBC Driver for Sybase ASE 12.x
 ase15.xa.driver.template = Sybase XA JDBC Driver for Sybase ASE 15.x
+
+org.eclipse.datatools.enablement.sybase.ase.12_x.other.driverTemplate = Other Driver
+org.eclipse.datatools.enablement.sybase.ase.15_0.other.driverTemplate = Other Driver
+
+driverClass = Driver Class
+driverVendor = Vendor
+driverVersion = Version
+driverDBName = Database Name
+driverConnectionURL = Connection URL
+driverUID = User ID
+driverPWD = Password
