--- a/plugins/org.eclipse.datatools.enablement.sybase.asa/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa/plugin.xml
@@ -353,6 +353,128 @@
             id="org.eclipse.datatools.enablement.sybase.asa.category"
             name="%asa.category"
             parentCategory="org.eclipse.datatools.enablement.sybase"/>
+      <driverTemplate
+            createDefault="false"
+            emptyJarListIsOK="false"
+            id="org.eclipse.datatools.enablement.sybase.asa.9_x.other.driverTemplate"
+            name="%org.eclipse.datatools.enablement.sybase.asa.9_x.other.driverTemplate"
+            parentCategory="org.eclipse.datatools.enablement.sybase.asa.9x">
+         <properties>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.driverClass"
+                  name="%driverClass"
+                  required="true"
+                  visible="true">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.vendor"
+                  name="%driverVendor"
+                  required="true"
+                  value="Sybase"
+                  visible="false">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.version"
+                  name="%driverVersion"
+                  required="true"
+                  value="12.x"
+                  visible="false">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.databaseName"
+                  name="%driverDBName"
+                  required="true"
+                  visible="true">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.URL"
+                  name="%driverConnectionURL"
+                  required="true"
+                  visible="true">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.username"
+                  name="%driverUID"
+                  required="false"
+                  visible="true">
+            </property>
+            <property
+                  customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.password"
+                  name="%driverPWD"
+                  required="false"
+                  visible="true">
+            </property>
+         </properties>
+      </driverTemplate>
+      <driverTemplate
+            createDefault="false"
+            emptyJarListIsOK="false"
+            id="org.eclipse.datatools.enablement.sybase.asa.10_x.other.driverTemplate"
+            name="%org.eclipse.datatools.enablement.sybase.asa.10_0.other.driverTemplate"
+            parentCategory="org.eclipse.datatools.enablement.sybase.asa.10x">
+         <properties>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.driverClass"
+                  name="%driverClass"
+                  required="true"
+                  visible="true">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.vendor"
+                  name="%driverVendor"
+                  required="true"
+                  value="Sybase"
+                  visible="false">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.version"
+                  name="%driverVersion"
+                  required="true"
+                  value="12.x"
+                  visible="false">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.databaseName"
+                  name="%driverDBName"
+                  required="true"
+                  visible="true">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.URL"
+                  name="%driverConnectionURL"
+                  required="true"
+                  visible="true">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.username"
+                  name="%driverUID"
+                  required="false"
+                  visible="true">
+            </property>
+            <property
+                  customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.password"
+                  name="%driverPWD"
+                  required="false"
+                  visible="true">
+            </property>
+         </properties>
+      </driverTemplate>
    </extension> 
  
  </plugin>  
