--- a/plugins/org.eclipse.datatools.enablement.sybase.ase/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase/plugin.xml
@@ -599,6 +599,128 @@
             id="org.eclipse.datatools.enablement.sybase.ase.15x"
             name="%15.xVersionString"
             parentCategory="org.eclipse.datatools.enablement.sybase.ase.category"/>
+      <driverTemplate
+            createDefault="false"
+            emptyJarListIsOK="false"
+            id="org.eclipse.datatools.enablement.sybase.ase.12_x.other.driverTemplate"
+            name="%org.eclipse.datatools.enablement.sybase.ase.12_x.other.driverTemplate"
+            parentCategory="org.eclipse.datatools.enablement.sybase.ase.12x">
+         <properties>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.driverClass"
+                  name="%driverClass"
+                  required="true"
+                  visible="true">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.vendor"
+                  name="%driverVendor"
+                  required="true"
+                  value="Sybase"
+                  visible="false">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.version"
+                  name="%driverVersion"
+                  required="true"
+                  value="12.x"
+                  visible="false">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.databaseName"
+                  name="%driverDBName"
+                  required="true"
+                  visible="true">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.URL"
+                  name="%driverConnectionURL"
+                  required="true"
+                  visible="true">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.username"
+                  name="%driverUID"
+                  required="false"
+                  visible="true">
+            </property>
+            <property
+                  customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.password"
+                  name="%driverPWD"
+                  required="false"
+                  visible="true">
+            </property>
+         </properties>
+      </driverTemplate>
+      <driverTemplate
+            createDefault="false"
+            emptyJarListIsOK="false"
+            id="org.eclipse.datatools.enablement.sybase.ase.15_0.other.driverTemplate"
+            name="%org.eclipse.datatools.enablement.sybase.ase.15_0.other.driverTemplate"
+            parentCategory="org.eclipse.datatools.enablement.sybase.ase.15x">
+         <properties>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.driverClass"
+                  name="%driverClass"
+                  required="true"
+                  visible="true">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.vendor"
+                  name="%driverVendor"
+                  required="true"
+                  value="Sybase"
+                  visible="false">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.version"
+                  name="%driverVersion"
+                  required="true"
+                  value="15.0"
+                  visible="false">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.databaseName"
+                  name="%driverDBName"
+                  required="true"
+                  visible="true">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.URL"
+                  name="%driverConnectionURL"
+                  required="true"
+                  visible="true">
+            </property>
+            <property
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.username"
+                  name="%driverUID"
+                  required="false"
+                  visible="true">
+            </property>
+            <property
+                  customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+                  generated="false"
+                  id="org.eclipse.datatools.connectivity.db.password"
+                  name="%driverPWD"
+                  required="false"
+                  visible="true">
+            </property>
+         </properties>
+      </driverTemplate>
    </extension> 
    
     
