Update provider field

--- a/plugins/org.eclipse.datatools.enablement.sybase.ase.models/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase.models/build.properties
@@ -1,15 +1,17 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.5 2008/02/19 04:30:42 renj Exp $
+# $Id: build.properties,v 1.1 2008/03/27 07:41:14 lsong Exp $
 
 bin.includes = sybase.ase.models.jar,\
                models/,\
                META-INF/,\
                .,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               about.html
 jars.compile.order = .
 source.. = src/
 output.. = bin/
 plugin.version =	1.0.1.200801241
+src.includes = about.html
