--- a/plugins/org.eclipse.datatools.enablement.sybase.ase.models/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase.models/plugin.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: plugin.properties,v 1.1 2006/08/25 18:29:46 brianf Exp $
+# $Id: plugin.properties,v 1.1 2008/03/27 07:41:14 lsong Exp $
 
 # ====================================================================
 # To code developer:
@@ -16,5 +16,5 @@
 # ====================================================================
 
 pluginName = Sybase ASE Model Plug-in
-providerName = Sybase, Inc.
+providerName = Eclipse.org
 
