--- a/plugins/org.eclipse.datatools.enablement.sybase.ase.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase.ui/build.properties
@@ -4,5 +4,7 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                plugin.properties,\
-               icons/
+               icons/,\
+               about.html
 plugin.version =	1.0.1.200801241
+src.includes = about.html
