--- a/plugins/org.eclipse.datatools.enablement.sybase/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase/plugin.properties
@@ -5,7 +5,7 @@ sybase.drivers.category = Sybase
 sybase.drivers.category.description = Drivers associated with Sybase products
 # ====================================================================
 pluginName = Sybasesqlmodel Model
-providerName = Sybase, Inc.
+providerName = Eclipse.org
 temptable.name = Temporary Table
 trigger.name = Trigger
 parameter.name = Parameter
