--- a/plugins/org.eclipse.datatools.enablement.sybase.ase/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase/build.properties
@@ -7,6 +7,8 @@ bin.includes = META-INF/,\
                icons/,\
                .,\
                plugin.properties,\
-               runtime/
+               runtime/,\
+               schema/
 jars.compile.order = .
 plugin.version =	1.0.1.200801241
+src.includes = about.html
