DTP 1.6 ljulien - 2008 03 27 - https://bugs.eclipse.org/bugs/show_bug.cgi?id=222088

--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
@@ -23,7 +23,7 @@ Extension.NewRepositoryWizard.Description = Create a new repository for connecti
 datatools.preference.page.name=Connectivity
 drivers.preference.page.name = Driver Definitions
 category.name.connectionProfiles = Connection Profiles
-datatools.core.ui.preferences.data.node = Data Tooling
+datatools.core.ui.preferences.data.node = Data Management
 
 DSE.content = Data Source Explorer Extension
 
